# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//unknown/components/ai_rewriter/common/buildflags/buildflags.gni")
import("//unknown/components/brave_vpn/common/buildflags/buildflags.gni")
import("//unknown/components/brave_wallet/common/buildflags/buildflags.gni")
import("//unknown/components/speedreader/common/buildflags/buildflags.gni")
import("//build/config/features.gni")

source_set("renderer") {
  visibility = [
    "//brave:child_dependencies",
    "//unknown/renderer/*",
    "//unknown/test:*",
    "//chrome/renderer/*",
  ]

  public_deps = [ "//chrome/renderer" ]

  deps = [
    "//unknown/components/brave_search/common",
    "//unknown/components/brave_search/renderer",
    "//unknown/components/brave_shields/core/common",
    "//unknown/components/cosmetic_filters/renderer",
    "//v8",
  ]

  if (enable_ai_rewriter) {
    deps += [ "//unknown/components/ai_rewriter/renderer" ]
  }

  if (enable_brave_wallet) {
    deps += [
      "//unknown/components/brave_wallet/renderer",
      "//unknown/renderer/brave_wallet/",
    ]
  }

  if (enable_speedreader) {
    deps += [ "//unknown/components/speedreader/renderer" ]
  }

  if (is_android) {
    deps += [ "//unknown/components/brave_mobile_subscription/renderer/android" ]
  }
}
