# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//unknown/components/ai_chat/core/common/buildflags/buildflags.gni")
import("//unknown/components/ai_rewriter/common/buildflags/buildflags.gni")
import("//unknown/components/brave_vpn/common/buildflags/buildflags.gni")
import("//unknown/components/brave_wallet/common/buildflags/buildflags.gni")
import("//unknown/components/speedreader/common/buildflags/buildflags.gni")
import("//unknown/components/tor/buildflags/buildflags.gni")
import("//unknown/components/web_discovery/buildflags/buildflags.gni")
import("//third_party/widevine/cdm/widevine.gni")

brave_chrome_renderer_sources = [
  "//unknown/renderer/brave_content_renderer_client.cc",
  "//unknown/renderer/brave_content_renderer_client.h",
  "//unknown/renderer/brave_render_frame_observer.cc",
  "//unknown/renderer/brave_render_frame_observer.h",
  "//unknown/renderer/brave_render_thread_observer.cc",
  "//unknown/renderer/brave_render_thread_observer.h",
]

brave_chrome_renderer_deps = [
  "//unknown/common:mojo_bindings",
  "//unknown/components/ai_chat/core/common/buildflags",
  "//unknown/components/ai_rewriter/common/buildflags",
  "//unknown/components/brave_search/common",
  "//unknown/components/brave_search/renderer",
  "//unknown/components/brave_shields/core/common",
  "//unknown/components/brave_vpn/common/buildflags",
  "//unknown/components/brave_wallet/common/buildflags",
  "//unknown/components/cosmetic_filters/renderer",
  "//unknown/components/playlist/content/renderer",
  "//unknown/components/playlist/core/common/buildflags",
  "//unknown/components/safe_builtins/renderer",
  "//unknown/components/script_injector/renderer",
  "//unknown/components/skus/common",
  "//unknown/components/skus/renderer",
  "//unknown/components/speedreader/common/buildflags",
  "//unknown/components/tor/buildflags",
  "//unknown/components/web_discovery/buildflags",
  "//mojo/public/cpp/bindings",
  "//third_party/blink/public:blink",
  "//third_party/blink/public/common",
]

if (enable_ai_chat) {
  brave_chrome_renderer_deps += [
    "//unknown/components/ai_chat/core/common",
    "//unknown/components/ai_chat/renderer",
  ]
}

if (enable_tor) {
  brave_chrome_renderer_deps += [ "//unknown/components/tor/renderer" ]
}

if (enable_speedreader) {
  brave_chrome_renderer_deps += [
    "//unknown/components/speedreader/common",
    "//unknown/components/speedreader/renderer",
  ]
}

if (enable_ai_rewriter) {
  brave_chrome_renderer_deps += [ "//unknown/components/ai_rewriter/renderer" ]
}

if (enable_brave_vpn) {
  brave_chrome_renderer_deps += [ "//unknown/components/brave_vpn/common" ]
}

if (enable_brave_wallet) {
  brave_chrome_renderer_deps += [
    "//unknown/components/brave_wallet/common",
    "//unknown/components/brave_wallet/renderer",
    "//unknown/renderer/brave_wallet",
  ]
}

if (is_android) {
  brave_chrome_renderer_deps +=
      [ "//unknown/components/brave_mobile_subscription/renderer/android" ]
}

if (enable_web_discovery_native) {
  brave_chrome_renderer_deps += [
    "//unknown/components/web_discovery/common",
    "//unknown/components/web_discovery/renderer",
  ]
}

brave_chrome_renderer_deps += [ "//third_party/widevine/cdm:headers" ]

# do not add anything else here
brave_chrome_renderer_public_deps = []
