# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//unknown/components/brave_wallet/common/buildflags/buildflags.gni")
import("//unknown/components/tor/buildflags/buildflags.gni")
import("//unknown/utility/importer/sources.gni")

brave_utility_sources = [
  "//unknown/utility/brave_content_utility_client.cc",
  "//unknown/utility/brave_content_utility_client.h",
]

brave_utility_sources += brave_utility_importer_sources

brave_utility_deps = [
  "//unknown/components/brave_wallet/common/buildflags",
  "//unknown/components/services/bat_ads:lib",
  "//unknown/components/services/bat_ads/public/interfaces",
  "//unknown/components/services/bat_rewards:lib",
  "//unknown/components/services/bat_rewards/public/interfaces",
  "//unknown/components/tor/buildflags",
  "//mojo/public/cpp/bindings",
]

if (enable_brave_wallet) {
  brave_utility_deps += [
    "//unknown/components/services/brave_wallet:lib",
    "//unknown/components/services/brave_wallet/public/mojom",
  ]
}

if (is_android) {
  # This deps is only to suppress gn check error:
  # ERROR at //chrome/utility/services.cc:56:11: Include not allowed.
  #  #include "chrome/common/importer/profile_import.mojom.h"
  brave_utility_deps += [ "//chrome/common/importer:interfaces" ]
}

brave_utility_deps += brave_utility_importer_deps

if (enable_tor) {
  brave_utility_deps += [
    "//unknown/components/services/tor",
    "//unknown/components/services/tor/public/interfaces",
  ]
}

brave_utility_public_deps = []
brave_utility_public_deps += brave_utility_importer_public_deps
