# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//extensions/buildflags/buildflags.gni")

brave_browser_autocomplete_sources = [
  "//unknown/browser/autocomplete/brave_autocomplete_scheme_classifier.cc",
  "//unknown/browser/autocomplete/brave_autocomplete_scheme_classifier.h",
]

brave_browser_autocomplete_deps = [
  "//base",
  "//unknown/common",
  "//unknown/components/omnibox/buildflags",
  "//chrome/browser/profiles:profile",
]
