# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

brave_browser_brave_news_sources = []
brave_browser_brave_news_deps = []

if (is_android) {
  brave_browser_brave_news_sources += [ "//unknown/browser/brave_news/android/brave_news_controller_factory_android.cc" ]
}
brave_browser_brave_news_sources += [
  "//unknown/browser/brave_news/brave_news_controller_factory.cc",
  "//unknown/browser/brave_news/brave_news_controller_factory.h",
  "//unknown/browser/brave_news/brave_news_tab_helper.cc",
  "//unknown/browser/brave_news/brave_news_tab_helper.h",
  "//unknown/browser/brave_news/direct_feed_fetcher_delegate_impl.cc",
  "//unknown/browser/brave_news/direct_feed_fetcher_delegate_impl.h",
]

brave_browser_brave_news_deps += [
  "//base",
  "//unknown/components/brave_news/browser",
  "//unknown/components/brave_news/common",
  "//unknown/components/brave_shields/content/browser",
  "//chrome/browser/profiles:profile",
  "//components/keyed_service/content",
  "//content/public/browser",
]
