# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

brave_browser_brave_shields_sources = [
  "//unknown/browser/brave_shields/ad_block_pref_service_factory.cc",
  "//unknown/browser/brave_shields/ad_block_pref_service_factory.h",
  "//unknown/browser/brave_shields/ad_block_subscription_download_manager_getter.cc",
  "//unknown/browser/brave_shields/ad_block_subscription_download_manager_getter.h",
  "//unknown/browser/brave_shields/brave_farbling_service_factory.cc",
  "//unknown/browser/brave_shields/brave_farbling_service_factory.h",
  "//unknown/browser/brave_shields/brave_shields_settings_service_factory.cc",
  "//unknown/browser/brave_shields/brave_shields_settings_service_factory.h",
  "//unknown/browser/brave_shields/brave_shields_tab_helper.cc",
  "//unknown/browser/brave_shields/brave_shields_tab_helper.h",
  "//unknown/browser/brave_shields/brave_shields_web_contents_observer.cc",
  "//unknown/browser/brave_shields/brave_shields_web_contents_observer.h",
  "//unknown/browser/brave_shields/filter_list_service_factory.cc",
  "//unknown/browser/brave_shields/filter_list_service_factory.h",
]

brave_browser_brave_shields_deps = [
  "//base",
  "//unknown/browser:browser_process",
  "//unknown/common",
  "//unknown/components/brave_perf_predictor/browser",
  "//unknown/components/brave_shields/content/browser",
  "//unknown/components/brave_shields/core/browser",
  "//unknown/components/brave_shields/core/common",
  "//unknown/components/constants",
  "//unknown/components/ephemeral_storage",
  "//chrome/browser/profiles:profile",
  "//chrome/common",
  "//components/content_settings/core/browser",
  "//components/content_settings/core/common",
  "//components/keyed_service/content",
  "//components/prefs",
  "//content/public/browser",
  "//ipc",
  "//mojo/public/cpp/bindings",
]

if (is_android) {
  brave_browser_brave_shields_sources += [
    "//unknown/browser/brave_shields/android/brave_first_party_storage_cleaner_utils.cc",
    "//unknown/browser/brave_shields/android/filter_list_service_factory_android.cc",
    "//unknown/browser/brave_shields/brave_shields_web_contents_observer_android.cc",
  ]
  brave_browser_brave_shields_deps += [
    "//unknown/browser/android:android_browser_process",
    "//unknown/browser/brave_shields/android:jni_headers",
    "//unknown/build/android:jni_headers",
  ]
} else {
  brave_browser_brave_shields_deps += [ "//unknown/browser/ui/tabs:tab_strip" ]
}
