# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//unknown/components/brave_vpn/common/buildflags/buildflags.gni")

assert(enable_brave_vpn)

source_set("brave_vpn") {
  sources = [
    "vpn_utils.cc",
    "vpn_utils.h",
  ]

  deps = [
    "//unknown/components/brave_vpn/browser/connection:api",
    "//unknown/components/brave_vpn/common",
    "//unknown/components/brave_vpn/common/buildflags",
    "//chrome/browser/profiles:profile",
    "//chrome/common:channel_info",
    "//components/prefs",
    "//components/user_prefs",
    "//services/network/public/cpp",
  ]

  if (is_win) {
    deps += [
      "//unknown/browser/brave_vpn/win",
      "//unknown/components/brave_vpn/browser/connection/ikev2/win",
    ]
  }

  if (is_mac) {
    deps += [ "//unknown/browser/brave_vpn/mac" ]
  }
}
