# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

brave_browser_debounce_sources = [
  "//unknown/browser/debounce/debounce_service_factory.cc",
  "//unknown/browser/debounce/debounce_service_factory.h",
]

brave_browser_debounce_deps = [
  "//base",
  "//unknown/components/debounce/core/browser",
  "//unknown/components/debounce/core/common",
  "//chrome/common",
  "//components/keyed_service/content",
]
