# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

if (!is_android) {
  source_set("browser_tests") {
    testonly = true
    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [
      "brave_dark_mode_fingerprint_protection_browsertest.cc",
      "brave_enumeratedevices_farbling_browsertest.cc",
      "brave_farbling_browsertest.cc",
      "brave_font_whitelist_browsertest.cc",
      "brave_navigator_devicememory_farbling_browsertest.cc",
      "brave_navigator_hardwareconcurrency_farbling_browsertest.cc",
      "brave_navigator_keyboard_api_browsertest.cc",
      "brave_navigator_languages_farbling_browsertest.cc",
      "brave_navigator_plugins_farbling_browsertest.cc",
      "brave_navigator_usb_farbling_browsertest.cc",
      "brave_navigator_useragent_farbling_browsertest.cc",
      "brave_offscreencanvas_farbling_browsertest.cc",
      "brave_screen_farbling_browsertest.cc",
      "brave_speech_synthesis_farbling_browsertest.cc",
      "brave_webaudio_farbling_browsertest.cc",
      "brave_webgl_farbling_browsertest.cc",
    ]

    deps = [
      "//base",
      "//unknown/browser",
      "//unknown/browser/extensions:test_support",
      "//unknown/common",
      "//unknown/components/brave_component_updater/browser",
      "//unknown/components/brave_shields/content/browser",
      "//unknown/components/brave_shields/content/browser:test_support",
      "//unknown/components/brave_shields/core/browser",
      "//unknown/components/brave_shields/core/common",
      "//unknown/components/constants",
      "//unknown/components/webcompat/core/common",
      "//unknown/third_party/blink/renderer",
      "//chrome/browser",
      "//chrome/browser/content_settings:content_settings_factory",
      "//chrome/browser/ui",
      "//chrome/browser/usb",
      "//chrome/common",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//components/content_settings/renderer",
      "//components/embedder_support:user_agent",
      "//components/language/core/browser",
      "//components/permissions",
      "//components/prefs",
      "//content/public/browser",
      "//content/test:test_support",
      "//ui/color:test_support",
      "//ui/native_theme:test_support",
    ]
  }
}
